--- a/pom.xml
+++ b/pom.xml
@@ -425,6 +425,12 @@
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>cobertura-maven-plugin</artifactId>
                         <version>${cobertura.version}</version>
+                        <executions>
+                            <execution>
+                                <groupId>ch.qos.logback</groupId>
+                                <artifactId>logback-parent</artifactId>
+                            </execution>
+                        </executions>
                         <configuration>
                             <formats>
                                 <format>html</format>
