--- a/pom.xml
+++ b/pom.xml
@@ -425,12 +425,16 @@
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>cobertura-maven-plugin</artifactId>
                         <version>${cobertura.version}</version>
-                         <exclusions>
-                            <exclusion>
-                                <groupId>org.slf4j</groupId>
-                                <artifactId>slf4j-simple</artifactId>
-                            </exclusion>
-                        </exclusions>
+                        <dependencies>
+                            <dependencies>
+                                <exclusions>
+                                    <exclusion>
+                                        <groupId>org.slf4j</groupId>
+                                        <artifactId>slf4j-simple</artifactId>
+                                    </exclusion>
+                                </exclusions>
+                            </dependencies>
+                        </dependencies>
                         <configuration>
                             <formats>
                                 <format>html</format>
