--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,16 @@
             <version>1.9.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+                <exclusions>
+                    <exclusion>
+                        <groupId>ch.qos.logback</groupId>
+                        <artifactId>logback-classic</artifactId>
+                    </exclusion>
+                </exclusions>
+        </dependency>
     </dependencies>
 
     <modules>
@@ -426,11 +436,6 @@
                         <artifactId>cobertura-maven-plugin</artifactId>
                         <version>${cobertura.version}</version>
                         <configuration>
-                            <instrumentation>
-                                <excludes>
-                                    <exclude>org/slf4j/impl/StaticLoggerBinder.class</exclude>
-                                </excludes>
-                            </instrumentation>
                             <formats>
                                 <format>html</format>
                                 <format>xml</format>
