--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,8 @@
         <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.6</version>
+            <scope>test</scope>
                 <exclusions>
                     <exclusion>
                         <groupId>ch.qos.logback</groupId>
