update cobertura dependency

--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,10 @@
                         <groupId>ch.qos.logback</groupId>
                         <artifactId>logback-classic</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <artifactId>tools</artifactId>
+                        <groupId>com.sun</groupId>
+                    </exclusion>
                 </exclusions>
         </dependency>
     </dependencies>
